--- a/macros.tex
+++ b/macros.tex
@@ -7,6 +7,25 @@
 \newcommand{\termdef}[1]{\textnormal{\textbf{#1}}}
 \newcommand{\nullvector}{\textbf{o}}
 
+\DeclarePairedDelimiter\abs{\lvert}{\rvert}%
+\DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+
+\makeatletter
+\newcommand*{\Relbarfill@}{\arrowfill@\Relbar\Relbar\Relbar}
+\newcommand*{\xeq}[2][]{\ext@arrow 0055\Relbarfill@{#1}{#2}}
+\makeatother
+
+% Swap the definition of \abs* and \norm*, so that \abs
+% and \norm resizes the size of the brackets, and the 
+% starred version does not.
+\makeatletter
+\let\oldabs\abs
+\def\abs{\@ifstar{\oldabs}{\oldabs*}}
+%
+\let\oldnorm\norm
+\def\norm{\@ifstar{\oldnorm}{\oldnorm*}}
+\makeatother
+
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
   \hskip -\arraycolsep
@@ -19,7 +38,7 @@
 \newtheorem{cor}{Corollary}[]
 \newtheorem{claim}{Claim}[]
 \newtheorem*{definition}{Definition}
-\newtheorem{remark}{Remark}
+\newtheorem*{remark}{Remark}
 \newtheorem{example}{Example}
 
 \newcommand{\bigO}{\mathcal{O}}
